--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Discover</string>
+    <string name="tags_label">Tags:</string>
 
 
     <string name="restaurant_name">Restaurant Name</string>
