show exhausted item at bottom of results

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="tags_label">Tags:</string>
     <string name="status_string">%1s Mins</string>
     <string name="retry_string">Retry</string>
+    <string name="exhausted_string">No more results…</string>
 
 
     <string name="restaurant_name">Restaurant Name</string>
