show retry screen for RestaurantListActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="status_string">%1s Mins</string>
     <string name="retry_string">Retry</string>
     <string name="exhausted_string">No more results…</string>
+    <string name="error_message">Error retrieving data, Check Network.</string>
+    <string name="retry_message">Error retrieving data. Tap to retry.</string>
 
 
     <string name="restaurant_name">Restaurant Name</string>
@@ -14,5 +16,5 @@
     <string name="delivery_cost">$0.00</string>
     <string name="review_ratings">4.0 / 5.0(1234ratings)</string>
     <string name="restaurant_type">Italian</string>
-    <string name="error_message">Error retrieving data, Check Network </string>
+
 </resources>
